# jacaranda

./: README.md  pyproject.toml  setup.py
examples/: jacaranda-autoencode.py  jacaranda-cnn1d.py  jacaranda-mlp.py  jacaranda-vae.py  jacaranda-xgboost.py
jacaranda/: autoencoder.py  config.py  mlp.py  pytorch.py  xgboost.py  xgboost_regression.py
